<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sg.edu.ntu.eee.aedlocator.AEDDetailActivity"
    tools:showIn="@layout/activity_aed_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/ic_aed_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_map_marker"
            android:contentDescription="ic aed address"/>

        <TextView
            android:id="@+id/info_aed_addr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/ic_aed_addr"
            app:layout_constraintLeft_toRightOf="@id/ic_aed_addr"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/detail_addr"
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.3"/>


        <ImageView
            android:id="@+id/ic_aed_loca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_aed_addr"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_add_info_detail"
            android:contentDescription="ic aed location"/>

        <TextView
            android:id="@+id/info_aed_loca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_aed_loca"
            app:layout_constraintTop_toTopOf="@id/ic_aed_loca"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/detail_loca"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/ic_aed_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_aed_loca"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_status_green"
            android:contentDescription="ic aed status"/>

        <TextView
            android:id="@+id/info_aed_stat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_aed_stat"
            app:layout_constraintTop_toTopOf="@id/ic_aed_stat"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/detail_status"
            android:textSize="16sp"
            android:textColor="@color/colorVerified"/>

        <ImageView
            android:id="@+id/ic_aed_ctbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_aed_stat"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_person_add_contributor"
            android:contentDescription="ic aed status"/>

        <TextView
            android:id="@+id/info_aed_ctbr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_aed_ctbr"
            app:layout_constraintTop_toTopOf="@id/ic_aed_ctbr"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/detail_contbr"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/ic_aed_been"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_aed_ctbr"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_person_been_crowd"/>

        <TextView
            android:id="@+id/info_aed_been"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_aed_been"
            app:layout_constraintTop_toTopOf="@id/ic_aed_been"
            android:text="@string/detail_been"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-120"
            app:layout_constraintTop_toTopOf="@id/ic_aed_been"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_key_tip"
            android:clickable="true"
            android:onClick="showTip"/>

        <ImageView
            android:id="@+id/ic_aed_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/info_aed_been"
            app:srcCompat="@drawable/ic_time_hours" />

        <TextView
            android:id="@+id/info_aed_hour"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_aed_hour"
            app:layout_constraintTop_toTopOf="@id/ic_aed_hour"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/detail_hour"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/info_aed_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_aed_hour"
            app:srcCompat="@drawable/aed_sample_capt" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
